--- a/.github/workflows/make_file_example.yml
+++ b/.github/workflows/make_file_example.yml
@@ -1,19 +1,8 @@
 # This is a basic workflow to help you get started with Actions
 
 name: Make File Example
-
 # Controls when the workflow will run
-on:
-  # Triggers the workflow on push or pull request events but only for the main branch
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
-
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
+on: [push]
 jobs:
   # This workflow contains a single job called "build"
   build:
@@ -29,7 +18,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v1
         with:
-          python-version: 3.6.9
+          python-version: 3.9.6 
       - name: Install dependencies 
         run: |
           make install
