--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 astroid==2.6.6
 attrs==21.2.0
+coverage==5.5
 importlib-metadata==4.6.3
 iniconfig==1.1.1
 isort==5.9.3
@@ -11,6 +12,7 @@ py==1.10.0
 pylint==2.9.6
 pyparsing==2.4.7
 pytest==6.2.4
+pytest-cov==2.12.1
 toml==0.10.2
 typed-ast==1.4.3
 typing-extensions==3.10.0.0
