--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,3 @@
-astroid==2.6.6
-attrs==21.2.0
-coverage==5.5
-importlib-metadata==4.6.3
-iniconfig==1.1.1
-isort==5.9.3
-lazy-object-proxy==1.6.0
-mccabe==0.6.1
-packaging==21.0
-pluggy==0.13.1
-py==1.10.0
-pylint==2.9.6
-pyparsing==2.4.7
-pytest==6.2.4
-pytest-cov==2.12.1
-toml==0.10.2
-typed-ast==1.4.3
-typing-extensions==3.10.0.0
-wrapt==1.12.1
-zipp==3.5.0
+scikit-learn
+pandas
+torch
